--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               class="bg-white w-full rounded-sm border-search px-2 flex items-center my-0.5 gap-2"
             >
               <img src="./assets/icons/explorer.ico" alt="" />
-              <p>C:\\WINDOWS\SYSTEM\BLANK.HTML</p>
+              <p>C:\\PORTFOLIO.HTML</p>
             </div>
           </div>
           <!-- <div class="self-center">
@@ -141,7 +141,7 @@
             <li>🙋User Experience</li>
             <li>🏃‍♀️Agile</li>
           </ul>
-          <nav class="flex items-center justify-center gap-4">
+          <nav class="flex items-center justify-center gap-4 mb-20">
             <a href="mailto:bsromeiro@gmail.com">
               <img src="./assets/icons/Fax.ico" alt="" width="70px" />
             </a>
