--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="h-screen bg-blue-windows">
     <main
-      class="flex flex-col w-[100vw] h-[calc(100vh-54px)] z-10 py-0.5 bg-gray border-white border-2 text-black overflow-hidden fixed top-0"
+      class="flex flex-col w-[100vw] h-[calc(100vh-54px)] z-10 py-0.5 bg-gray border-white border-2 text-black overflow-hidden"
     >
       <header class="flex justify-between px-2 py-1">
         <div class="flex items-center gap-1">
