add work experience section + general improvements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="h-screen bg-blue-windows">
     <main
-      class="flex flex-col w-[100vw] h-[calc(100vh-54px)] z-10 py-0.5 bg-gray border-white border-2 text-black overflow-hidden"
+      class="flex flex-col w-[100vw] h-[calc(100vh-54px)] z-10 pt-0.5 bg-gray border-white border-2 text-black overflow-hidden"
     >
       <header class="flex justify-between px-2 py-1">
         <div class="flex items-center gap-1">
@@ -72,8 +72,8 @@
               <!-- <div
                 class="flex [&>*]:h-full [&>*]:w-1 [&>*]:bg-gray [&>*]:border-solid [&>*]:border-1 [&>*]:border-r-gray"
               >
-                <div class=""></div>p
-                <div class=""></div>
+                <div></div>p
+                <div></div>
               </div> -->
               <p class="self-center">Address</p>
             </div>
@@ -88,56 +88,113 @@
       </div>
 
       <section
-        class="flex flex-col gap-10 text-xl items-center bg-blue-windows overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 p-2 m-1"
+        class="flex flex-col gap-10 text-xl items-center bg-blue-windows overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 p-2 mx-1"
       >
         <img
           src="./assets/images/profile.png"
-          width="150"
+          width="250"
           alt="Breno Romeiro"
           class="flex items-center rounded-full mt-10"
         />
         <div class="flex gap-2 items-center justify-center w-1/2">
-          <img
-            src="./assets/icons/orca.png"
-            alt=""
-            class="min-w-[80px] flip-horizontal"
-          />
           <h1
-            class="flex flex-col items-center text-4xl font-bold tracking-wider"
+            class="flex flex-col items-center text-7xl font-black tracking-wider"
           >
             <span>Breno</span>
             <span>Romeiro</span>
           </h1>
-          <img src="./assets/icons/orca.png" alt="" class="min-w-[80px]" />
         </div>
-        <div class="flex flex-col gap-4 px-4 w-full">
-          <p class="first-letter:text-6xl first-letter:font-">
+        <div class="flex flex-col gap-10 px-4 w-full">
+          <p class="first-letter:text-8xl">
             Hi, I'm Breno! 👋
             <br />
-            I'm a multilingual Front-end developer with
+            I'm a multilingual <strong>Front-end developer</strong> with
             <b id="years-working"></b> of proven experience in helping companies
             create and maintain amazing software.
-            <br />
-            <br />
+          </p>
+
+          <div>
+            <h3 class="mb-4 font-bold text-4xl">Work experience</h3>
+            <ul>
+              <li class="flex">
+                <div class="flex flex-col items-center justify-center mr-4">
+                  <div class="w-3 h-3 bg-white rounded-full"></div>
+                  <div class="w-1 h-full bg-white"></div>
+                </div>
+                <div class="mb-10">
+                  <p class="font-bold leading-none">Front-end developer</p>
+                  <p class="italic text-sm font-bold">StoneCo</p>
+                  <p class="italic text-sm">01/2021 - Present</p>
+                  <p class="italic text-sm font-bold">
+                    React • TypeScript • TailwindCSS • Jest • Cypress.io
+                  </p>
+
+                  <ul
+                    class="[&>*]:ml-4 [&>*]:my-2 list-disc text-base leading-5"
+                  >
+                    <li>
+                      Help create/maintain the company’s
+                      <strong>component library</strong> with +50 components
+                    </li>
+                    <li><strong>Test</strong> components and applications</li>
+                    <li>
+                      Create/maintain financial
+                      <strong>graphs and dashboards</strong>.
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="flex">
+                <div class="flex flex-col items-center justify-center mr-4">
+                  <div class="w-3 h-3 bg-white rounded-full"></div>
+                  <div class="w-1 h-full bg-white"></div>
+                </div>
+
+                <div>
+                  <p class="font-bold leading-none">Front-end developer</p>
+                  <p class="italic text-sm font-bold">BeSuavy</p>
+                  <p class="italic text-sm">01/2021 - Present</p>
+                  <p class="italic text-sm font-bold">
+                    HTML • CSS • JavaScript • Figma • PHP
+                  </p>
+
+                  <ul
+                    class="[&>*]:ml-4 [&>*]:my-2 list-disc text-base leading-5"
+                  >
+                    <li>
+                      Build websites for small businessess from all around the
+                      world.
+                    </li>
+                    <li><strong>Test</strong> components and applications</li>
+                    <li>
+                      <strong>Prototype</strong> User Interfaces from low to
+                      100% fidelity.
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="py-2 font-bold">Skills</h3>
+            <ul class="list-inside">
+              <li>🧡 HTML</li>
+              <li>💙 CSS</li>
+              <li>💛 Javascript | TypeScript</li>
+              <li>⚛️ React</li>
+              <li>🎨 Greensock/GSAP (animation)</li>
+              <li>🧪 Cypress.io</li>
+              <li>🌎 Browser API's</li>
+              <li>📱Mobile First</li>
+              <li>🙋User Experience</li>
+              <li>🏃‍♀️Agile</li>
+            </ul>
+          </div>
+          <p>
             I'm passionate about learning and developing with a desire to apply
             skills on real world challenges.
           </p>
-          <p class="py-2 font-bold">My current stack:</p>
-          <ul class="list-inside">
-            <li>🧡 HTML</li>
-            <li>💙 CSS</li>
-            <li>💛 Javascript | TypeScript</li>
-            <li>⚛️ React</li>
-            <li>🎨 Greensock/GSAP (animation)</li>
-            <li>🧪 Cypress.io</li>
-            <li>🌎 Browser API's</li>
-          </ul>
-          <p class="py-2 font-bold">Skills:</p>
-          <ul class="list-inside">
-            <li>📱Mobile First</li>
-            <li>🙋User Experience</li>
-            <li>🏃‍♀️Agile</li>
-          </ul>
           <nav class="flex items-center justify-center gap-4 mb-20">
             <a href="mailto:bsromeiro@gmail.com">
               <img src="./assets/icons/Fax.ico" alt="" width="70px" />
@@ -172,7 +229,7 @@
         class="flex items-center h-full bg-gray rounded-sm border-2 border-l-gray-dark border-t-gray-dark px-1 w-40 justify-center"
       >
         <img src="./assets/icons/sound.png" alt="" />
-        <span class="" id="clock"></span>
+        <span id="clock"></span>
       </div>
     </footer>
   </body>
