fix height of screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Breno Romeiro</title>
   </head>
-  <body class="h-screen bg-blue-windows">
+  <body class="bg-blue-windows">
     <main
       class="flex flex-col w-[100vw] h-[calc(100vh-54px)] z-10 pt-0.5 bg-gray border-white border-2 text-black overflow-hidden"
     >
