update with new info

--- a/index.html
+++ b/index.html
@@ -123,8 +123,44 @@
                 </div>
                 <div class="mb-10">
                   <p class="font-bold leading-none">Front-end developer</p>
+                  <p class="italic text-sm font-bold">Nexer Group</p>
+                  <p class="italic text-sm">03/2023 - present</p>
+                  <p class="italic text-sm font-bold">
+                    Angular • TypeScript • JavaScript • SCRUM • API Rest
+                  </p>
+
+                  <ul
+                    class="[&>*]:ml-4 [&>*]:my-2 list-disc text-base leading-5"
+                  >
+                    <li>
+                      Implement the front-end for internal applications for
+                      various clients from multiple segments
+                    </li>
+                    <li>
+                      Collaborate with cross-functional teams to understand
+                      requirements and translate them into effective front-end
+                      solutions
+                    </li>
+                    <li>
+                      Enhance the front-end functionalities of various systems,
+                      focusing on AngularJS development.
+                    </li>
+                    <li>
+                      Collaborate with the QA team to conduct comprehensive
+                      testing and validation of the developed applications
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="flex">
+                <div class="flex flex-col items-center justify-center mr-4">
+                  <div class="w-3 h-3 bg-white rounded-full"></div>
+                  <div class="w-1 h-full bg-white"></div>
+                </div>
+                <div class="mb-10">
+                  <p class="font-bold leading-none">Front-end developer</p>
                   <p class="italic text-sm font-bold">StoneCo</p>
-                  <p class="italic text-sm">01/2021 - Present</p>
+                  <p class="italic text-sm">01/2021 - 10/2022</p>
                   <p class="italic text-sm font-bold">
                     React • TypeScript • TailwindCSS • Jest • Cypress.io
                   </p>
@@ -182,9 +218,11 @@
               <li>🧡 HTML</li>
               <li>💙 CSS</li>
               <li>💛 Javascript | TypeScript</li>
-              <li>⚛️ React</li>
+              <li>⚛️ React | Redux</li>
+              <li>🇦 AngularJS</li>
+              <li>🌊 Tailwind</li>
+              <li>🧪 Jest | Cypress.io</li>
               <li>🎨 Greensock/GSAP (animation)</li>
-              <li>🧪 Cypress.io</li>
               <li>🌎 Browser API's</li>
               <li>📱Mobile First</li>
               <li>🙋User Experience</li>
