add linkedin icon

--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
             skills on real world challenges.
           </p>
           <nav class="flex items-center justify-center gap-4 mb-20">
+            <a href="https://www.linkedin.com/in/brenoromeiro/" target="_blank">
+              <img src="./assets/icons/linkedin.png" alt="" width="60px" />
+            </a>
             <a href="mailto:bsromeiro@gmail.com">
               <img src="./assets/icons/Fax.ico" alt="" width="70px" />
             </a>
