add custom cursors to desktio

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
           <p class="first-letter:text-8xl">
             Hi, I'm Breno! 👋
             <br />
+            I'm currently <strong>open to work</strong>!
+            <br />
             I'm a multilingual <strong>Front-end developer</strong> with
             <b id="years-working"></b> of proven experience in helping companies
             create and maintain amazing software.
@@ -233,7 +235,7 @@
             I'm passionate about learning and developing with a desire to apply
             skills on real world challenges.
           </p>
-          <nav class="flex items-center justify-center gap-4 mb-20">
+          <nav class="flex items-center justify-center gap-4 mb-24">
             <a href="https://www.linkedin.com/in/brenoromeiro/" target="_blank">
               <img src="./assets/icons/linkedin.png" alt="" width="60px" />
             </a>
